[package]
name = "wiggly-pixels"
version = "0.1.0"
authors = ["Nachiketa Gargi <nachiketa.gargi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# This is gross! And I just edited this directly in Github like a psychopath

[dependencies]
nalgebra = "0.18"
minifb = "0.17"
